--- a/Pipfile
+++ b/Pipfile
@@ -5,13 +5,16 @@ verify_ssl = true
 
 [dev-packages]
 flake8 = "*"
+bandit = "*"
+black = "*"
+isort = "*"
+mypy = "*"
 
 [packages]
 boto3 = "*"
 click = "*"
 sickle = "*"
 smart-open = "*"
-
 
 [requires]
 python_version = "3.10"
