Move functionality out of CLI module, add tests
Why these changes are being introduced:
All of the app's logic was contained within the cli commands, making it
hard to write unit tests (which also did not exist). These changes
make it easier to unit test the oai logic and test the cli commands
separately.

How this addresses that need:
* Moves all oai-pmh related logic into oai.py module with an OAIClient
  class and some helper functions for writing output to files.
* Adds exclude deleted records option to harvest command.
* Adds unit tests for all functions and cli commands, with vcr cassette
  fixtures for all external oai-pmh calls.
* Adds make commands for test/coverage and coveralls (to be used with
  Github actions),
* Cleans up dependencies, make lint source folders, and setup.py.
* Updates readme and Dockerfile to include new cli and make commands

Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/RDI-76

--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,19 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-boto3 = "*"
 click = "*"
 sickle = "*"
-smart-open = "*"
+smart-open = {extras = ["s3"], version = "*"}
 
 [dev-packages]
-flake8 = "*"
 bandit = "*"
+coverage = "*"
 black = "*"
+flake8 = "*"
 isort = "*"
 mypy = "*"
+pytest = "*"
+vcrpy = "*"
 
 [requires]
 python_version = "3.10"
