rdi-95-add-sentry
* Add Sentry integration to cli.py
* Update CLI test to include Sentry
* Update Pipfile to include sentry_sdk
* Update README.md

* https://mitlibraries.atlassian.net/browse/RDI-95

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 click = "*"
 sickle = "*"
 smart-open = {extras = ["s3"], version = "*"}
+sentry-sdk = "*"
 
 [dev-packages]
 bandit = "*"
