--- a/.github/workflows/prod-promote.yml
+++ b/.github/workflows/prod-promote.yml
@@ -1,5 +1,6 @@
-### This is the Terraform-generated prod-promote.yml workflow for the oai-pmh-harvester-prod app repository ###
-name: Prod Promote Fargate Container
+### This is the Terraform-generated prod-promote.yml workflow for the oai-pmh-harvester-prod repository. ###
+### If this is a Lambda repo, uncomment the FUNCTION line at the end of the document.         ###
+name: Prod Container Promote
 on:
   workflow_dispatch:
   release:
@@ -7,8 +8,8 @@ on:
 
 jobs:
   deploy:
-    name: Prod Promote Fargate Container
-    uses: mitlibraries/.github/.github/workflows/fargate-shared-promote-prod.yml@main
+    name: Prod Container Promote
+    uses: mitlibraries/.github/.github/workflows/ecr-shared-promote-prod.yml@main
     secrets: inherit
     with:
       AWS_REGION: "us-east-1"
@@ -16,3 +17,5 @@ jobs:
       GHA_ROLE_PROD: oai-pmh-harvester-gha-prod
       ECR_STAGE: "oai-pmh-harvester-stage"
       ECR_PROD: "oai-pmh-harvester-prod"
+      # FUNCTION: ""
+ 
