Pin vcrpy versions
Why these changes are being introduced:
vcrpy 5.x has breaking changes with our test suite and pipenv setup. This will
be addressed during maintenance and not current work.

How this addresses that need:
* pins vcrpy and urllib3

Side effects of this change:
* pinned versions until updates and maintenance

Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/TIMX-258

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ click = "*"
 sentry-sdk = "*"
 sickle = "*"
 smart-open = {extras = ["s3"], version = "*"}
+urllib3 = "==1.26.18"
 
 [dev-packages]
 bandit = "*"
@@ -17,7 +18,7 @@ flake8 = "*"
 isort = "*"
 mypy = "*"
 pytest = "*"
-vcrpy = "*"
+vcrpy = "==4.2.1"
 
 [requires]
 python_version = "3.11"
