--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,19 @@ disallow_untyped_calls = true
 disallow_untyped_defs = true
 exclude = ["tests/"]
 
+[[tool.mypy.overrides]]
+module = [
+    "setuptools",
+    "sickle.*",
+    "smart_open"
+]
+ignore_missing_imports=true
+
 [tool.pytest.ini_options]
 log_level = "INFO"
 
 [tool.ruff]
-target-version = "py<VERSION-NUMBER>"
+target-version = "py311"
 select = ["ALL", "PT"]
 
 ignore = [
